# bibi-sync

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
examples/: latency_metrics.rs  stm32_test.rs
include/: bibi_sync.h
src/: lib.rs
src/auv/: controller.rs  mod.rs  thrust_mixer.rs
src/ffi/: mod.rs
src/pubsub/: message.rs  mod.rs  publisher.rs  registry.rs  subscriber.rs  topic.rs
src/python/: mod.rs
src/ring_buffer/: byte_buffer.rs  mod.rs
src/uart/: mod.rs  protocol.rs
tests/: cpp_test  cpp_test.cpp  cross_lang_test.py
