[package]
name = "bibi-sync-rust"
version = "0.1.0"
edition = "2021"

[lib]
name="bibi_sync"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
serialport = "4.3"

[features]
default = []
python = ["pyo3"]

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
